do not lowercase names

--- a/project/aux/nlp.ipynb
+++ b/project/aux/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "result = stanford_nlp.annotate(\n",
+    "    \"Mr. Brown called them.\",\n",
+    "    properties={\n",
+    "       'annotators': 'parse,coref',\n",
+    "       'outputFormat': 'json',\n",
+    "       'timeout': 60000,\n",
+    "    }\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -204,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -220,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -240,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -273,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -342,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -410,8 +428,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
-   "metadata": {},
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def starts_with_quotes(word):\n",
@@ -518,14 +538,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 35,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def contains_letters(word):\n",
+    "    for c in word:\n",
+    "        if c.isalpha():\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "\n",
+    "def lowercase_first_char(string):\n",
+    "    first_word = \"\".join(nltk.tokenize.word_tokenize(string)[:1])\n",
+    "    \n",
+    "    if first_word.strip(\".\") not in {\"I\", \"Dr\", \"Mr\", \"Mrs\", \"Ms\"}:\n",
+    "        return string[:1].lower() + string[1:]\n",
+    "    else:\n",
+    "        return string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def process_and_join_tokens(sent, offset=1, resolution_map=None, verbose=False):\n",
+    "def process_and_join_tokens(\n",
+    "    sent, offset=1, resolution_map=None, lowercase_first_letter=False, verbose=False\n",
+    "):\n",
     "    output_words = []\n",
     "    prev_word = \"\"\n",
     "    i = offset - 1\n",
+    "    is_first_word = True\n",
     "    while i < len(sent[\"tokens\"]):\n",
     "        \n",
     "        skipped_tokens = False\n",
@@ -563,21 +610,26 @@
     "            ):\n",
     "                output_words.append(\" \")\n",
     "            if resolution_map is None:\n",
-    "                output_words.append(word)\n",
+    "                output_word = word\n",
     "            else:\n",
     "                if word.lower() in {\"he\", \"she\", \"it\", \"they\", \"him\", \"her\", \"them\"}:\n",
     "                    key = (sent[\"index\"] + 1, token[\"index\"], token[\"index\"] + 1)\n",
     "                    if not key in resolution_map:\n",
-    "                        output_words.append(word)\n",
+    "                        output_word = word\n",
     "                    else:\n",
     "                        if verbose:\n",
     "                            print(\n",
     "                                f\"Substituting '{resolution_map[key]}'\"\n",
     "                                f\" for '{token['word']}'.\"\n",
     "                            )\n",
-    "                        output_words.append(resolution_map[key])\n",
+    "                        output_word = resolution_map[key]\n",
     "                else:\n",
-    "                    output_words.append(word)\n",
+    "                    output_word = word\n",
+    "            if is_first_word and contains_letters(output_word):\n",
+    "                is_first_word = False\n",
+    "                if lowercase_first_letter and token[\"ner\"] != \"PERSON\":\n",
+    "                    output_word = lowercase_first_char(output_word)\n",
+    "            output_words.append(output_word)\n",
     "            prev_word = word\n",
     "            i += 1\n",
     "            \n",
@@ -587,17 +639,19 @@
     "\n",
     "\n",
     "def test__process_and_join_tokens():\n",
-    "    def apply_to_sentence(sentence, offset=1, resolution_map=None):\n",
+    "    def apply_to_sentence(\n",
+    "        sentence, offset=1, resolution_map=None, lowercase_first_letter=False\n",
+    "    ):\n",
     "        result = stanford_nlp.annotate(\n",
     "            sentence,\n",
     "            properties={\n",
-    "               'annotators': 'parse',\n",
+    "               'annotators': 'parse,ner',\n",
     "               'outputFormat': 'json',\n",
     "               'timeout': 60000,\n",
     "            }\n",
     "        )\n",
     "        return process_and_join_tokens(\n",
-    "            result[\"sentences\"][0], offset, resolution_map\n",
+    "            result[\"sentences\"][0], offset, resolution_map, lowercase_first_letter\n",
     "        )\n",
     "\n",
     "    assert ( # Nothing is removed when there're no odd expressions\n",
@@ -640,18 +694,45 @@
     "    assert ( \n",
     "        apply_to_sentence(\"He said'' Hello! ''\") == \"He said ''Hello!''\"\n",
     "    )\n",
-    "    \n",
+    "    assert ( # Lowercase if lowercase_first_letter=True\n",
+    "        apply_to_sentence(\"We got a solution, at least\", lowercase_first_letter=True)\n",
+    "            == \"we got a solution\"\n",
+    "    )\n",
+    "    assert ( # Lowercase if lowercase_first_letter=True \n",
+    "        apply_to_sentence(\"(We got a solution, at least)\", lowercase_first_letter=True)\n",
+    "            == \"(we got a solution)\"\n",
+    "    )\n",
+    "    assert ( # Don't lowercase names\n",
+    "        apply_to_sentence(\"Sam got a solution, at least\", lowercase_first_letter=False)\n",
+    "            == \"Sam got a solution\"\n",
+    "    )\n",
     "    \n",
     "test__process_and_join_tokens()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "1\n",
+      "3\n",
+      "3\n",
+      "1\n",
+      "1\n",
+      "1\n"
+     ]
+    }
+   ],
    "source": [
     "def trim_and_fix_punctuation(sent):\n",
     "    trimmed = sent.strip()\n",
@@ -684,13 +765,17 @@
     "    if verbose:\n",
     "        print(\"-- syntactic parsing result\\n\", sent[\"parse\"])\n",
     "    if (\n",
-    "        sent[\"tokens\"][0][\"word\"].lower() in {\"if\", \"when\", \"as\"}\n",
+    "        len(sent[\"tokens\"]) == 0\n",
+    "            or sent[\"tokens\"][0][\"word\"].lower() in {\"if\", \"when\", \"as\"}\n",
     "            or is_imperative_verb(sent[\"tokens\"][0])\n",
+    "            or sent[\"tokens\"][0][\"word\"][:1] in {'\"', \"`\", \"'\"}\n",
     "    ):\n",
     "        if verbose:\n",
     "            print(\n",
     "                \"No tokens before the first NP will be removed because\"\n",
-    "                \" the sentence starts with if/when/as or an imperative verb.\"\n",
+    "                \" the sentence is either empty\"\n",
+    "                \" or starts with if/when/as, quotation mark,\"\n",
+    "                \"or an imperative verb.\"\n",
     "            )\n",
     "        return 1\n",
     "    else:\n",
@@ -707,20 +792,26 @@
     "            return first_np.startIndex\n",
     "\n",
     "\n",
-    "def take_first_sentence_and_remove_leading_words(text, verbose=False):\n",
+    "def take_first_sentence_and_remove_leading_words(\n",
+    "    text, lowercase_first_letter=False, verbose=False\n",
+    "):\n",
     "    if verbose:\n",
     "        print(\"Taking the first sentence and removing leading words:\")\n",
     "    \n",
     "    result = stanford_nlp.annotate(\n",
     "        text,\n",
     "        properties={\n",
-    "           'annotators': 'parse',\n",
+    "           'annotators': 'parse,ner',\n",
     "           'outputFormat': 'json',\n",
     "           'timeout': 60000,\n",
     "        }\n",
     "    )\n",
     "    \n",
-    "    if len(result[\"sentences\"]) == 0 or len(result[\"sentences\"][0]) == 0:\n",
+    "    if type(result) is str: # a timeout or, potentially, a Stanford NLP Server error:\n",
+    "        if verbose:\n",
+    "            print(f\"Error: {result}\")\n",
+    "        return None\n",
+    "    elif len(result[\"sentences\"]) == 0 or len(result[\"sentences\"][0]) == 0:\n",
     "        if verbose:\n",
     "            print(\n",
     "                \"The parser didn't extract any sentences\"\n",
@@ -730,9 +821,20 @@
     "    else:\n",
     "        sent = result[\"sentences\"][0]\n",
     "        offset = get_offset(sent, verbose)\n",
+    "        starts_with_quotes = (\n",
+    "            len(sent[\"tokens\"]) > 0 and sent[\"tokens\"][0][\"word\"][:1] in {'\"', \"'\", \"`\"}\n",
+    "        )\n",
     "        new_text = trim_and_fix_punctuation(\n",
     "            \" \".join(\n",
-    "                [process_and_join_tokens(sent, offset)]\n",
+    "                [\n",
+    "                    process_and_join_tokens(\n",
+    "                        sent, \n",
+    "                        offset, \n",
+    "                        lowercase_first_letter=(\n",
+    "                            lowercase_first_letter and not starts_with_quotes\n",
+    "                        )\n",
+    "                    )\n",
+    "                ]\n",
     "#                     + [join_tokens(s) for s in result[\"sentences\"][1:]]\n",
     "            )\n",
     "        )\n",
@@ -770,6 +872,30 @@
     "        take_first_sentence_and_remove_leading_words(\"At last they went to Spain, \") \n",
     "            == \"they went to Spain.\"\n",
     "    )\n",
+    "    assert (\n",
+    "        take_first_sentence_and_remove_leading_words(\n",
+    "            \"At last Sam went to Spain, \", lowercase_first_letter=True\n",
+    "        ) \n",
+    "            == \"Sam went to Spain.\"\n",
+    "    )\n",
+    "    assert (\n",
+    "        take_first_sentence_and_remove_leading_words(\n",
+    "            \"They went to Spain, \", lowercase_first_letter=True\n",
+    "        ) \n",
+    "            == \"they went to Spain.\"\n",
+    "    )\n",
+    "    assert (\n",
+    "        take_first_sentence_and_remove_leading_words(\n",
+    "            \"As a result, They went to Spain, \", lowercase_first_letter=True\n",
+    "        ) \n",
+    "            == \"they went to Spain.\"\n",
+    "    )\n",
+    "    assert (\n",
+    "        take_first_sentence_and_remove_leading_words(\n",
+    "            \"``They went to Spain,'' \", lowercase_first_letter=True\n",
+    "        ) \n",
+    "            == \"``They went to Spain,''.\"\n",
+    "    )\n",
     "    assert take_first_sentence_and_remove_leading_words(\"\") is None\n",
     "\n",
     "\n",
@@ -778,13 +904,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 57,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "def take_last_sentence_and_resolve_pronouns(text, verbose=False):\n",
+    "def take_last_sentence_and_resolve_pronouns(\n",
+    "    text, verbose=False\n",
+    "):\n",
     "    if verbose:\n",
     "        print(\"Taking the last sentence and resolving pronouns:\")\n",
     "    \n",
@@ -800,7 +926,11 @@
     "    \n",
     "    resolution_map = create_resolution_map(result[\"corefs\"])\n",
     "    \n",
-    "    if len(result[\"sentences\"]) == 0 or len(result[\"sentences\"][-1]) == 0:\n",
+    "    if type(result) is str: # a timeout or, potentially, a Stanford NLP Server error:\n",
+    "        if verbose:\n",
+    "            print(f\"Error: {result}\")\n",
+    "        return None\n",
+    "    elif len(result[\"sentences\"]) == 0 or len(result[\"sentences\"][-1]) == 0:\n",
     "        if verbose:\n",
     "            print(\n",
     "                \"The parser didn't extract any sentences\"\n",
@@ -811,7 +941,13 @@
     "        sent = result[\"sentences\"][-1]\n",
     "        offset = get_offset(sent)\n",
     "        new_text = trim_and_fix_punctuation(\n",
-    "            process_and_join_tokens(sent, offset, resolution_map, verbose)\n",
+    "            process_and_join_tokens(\n",
+    "                sent, \n",
+    "                offset, \n",
+    "                resolution_map, \n",
+    "                lowercase_first_letter=False, \n",
+    "                verbose=verbose\n",
+    "            )\n",
     "        )\n",
     "        if verbose:\n",
     "            print(f\"{text} \\n---> \\n{new_text}\")\n",
@@ -845,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "metadata": {
     "collapsed": true
    },
