--- a/project/preparation.ipynb
+++ b/project/preparation.ipynb
@@ -503,14 +503,9 @@
     "    \n",
     "def finalise_satellite_nucleus_text(sn_text, verbose=False):\n",
     "    processed_sn_text = nlp.take_first_sentence_and_remove_leading_words(\n",
-    "        sn_text, verbose\n",
+    "        sn_text, lowercase_first_letter=True, verbose=True\n",
     "    )\n",
-    "    if processed_sn_text is None:\n",
-    "        return None\n",
-    "    else:\n",
-    "        return utils.lowercase_first_letter(\n",
-    "            processed_sn_text\n",
-    "        )"
+    "    return processed_sn_text"
    ]
   },
   {
