drop statements with short nuclei

--- a/project/preparation.ipynb
+++ b/project/preparation.ipynb
@@ -491,7 +491,10 @@
     "    processed_nucleus_text = nlp.take_last_sentence_and_resolve_pronouns(\n",
     "        nucleus_text, verbose\n",
     "    )\n",
-    "    if processed_nucleus_text is None:\n",
+    "    if (\n",
+    "        processed_nucleus_text is None \n",
+    "            or len(nltk.tokenize.word_tokenize(processed_nucleus_text)) <= 3\n",
+    "    ):\n",
     "        return None\n",
     "    else:\n",
     "        return utils.remove_trailing_punctuation(\n",
@@ -503,7 +506,7 @@
     "    \n",
     "def finalise_satellite_nucleus_text(sn_text, verbose=False):\n",
     "    processed_sn_text = nlp.take_first_sentence_and_remove_leading_words(\n",
-    "        sn_text, lowercase_first_letter=True, verbose=True\n",
+    "        sn_text, lowercase_first_letter=True, verbose=verbose\n",
     "    )\n",
     "    return processed_sn_text"
    ]
