improve quote and punctuation fixing

--- a/project/aux/nlp.ipynb
+++ b/project/aux/nlp.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {
     "collapsed": true
    },
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {
     "collapsed": true
    },
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true
    },
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -503,7 +503,12 @@
     "                pointer += 1\n",
     "                if pointer < len(sentence) and not sentence[pointer].isspace():\n",
     "                    output_chars.append(\" \")\n",
-    "\n",
+    "    while len(quote_stack) > 0:\n",
+    "        if quote_stack[-1] == '\"':\n",
+    "            output_chars.append('\"')\n",
+    "        else:\n",
+    "            output_chars.append(\"''\")\n",
+    "        quote_stack.pop()\n",
     "    return \"\".join(output_chars)\n",
     "\n",
     "\n",
@@ -531,14 +536,14 @@
     "        fix_quotes(\"\\\"\\\"\") \n",
     "            == \"\\\"\\\"\"\n",
     "    )\n",
-    "    \n",
+    "    assert fix_quotes(\"She said'' Aha, I know.\") == \"She said ''Aha, I know.''\"\n",
     "    \n",
     "test__fix_quotes()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true
    },
@@ -562,8 +567,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def process_and_join_tokens(\n",
@@ -712,39 +719,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 47,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "3\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "1\n",
-      "3\n",
-      "3\n",
-      "1\n",
-      "1\n",
-      "1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def trim_and_fix_punctuation(sent):\n",
     "    trimmed = sent.strip()\n",
-    "    if len(trimmed) == 0:\n",
+    "    pointer = len(trimmed) - 1\n",
+    "    while pointer >= 0 and trimmed[pointer] in {\"'\", '\"'}:\n",
+    "        pointer -= 1\n",
+    "    if pointer < 0:\n",
     "        return \"\"\n",
     "    else:\n",
-    "        if trimmed[-1] in {\",\", \";\", \":\"}:\n",
-    "            return trimmed[:-1] + \".\"\n",
-    "        elif trimmed[-1] not in {\"!\", \"?\", \".\"}:\n",
-    "            return trimmed + \".\"\n",
+    "        contracted = trimmed[:(pointer + 1)]\n",
+    "        if contracted[-1] in {\",\", \";\", \":\"}:\n",
+    "            return contracted[:-1] + \".\" + trimmed[(pointer + 1):]\n",
+    "        elif contracted[-1] not in {\"!\", \"?\", \".\"}:\n",
+    "            return contracted + \".\" + trimmed[(pointer + 1):]\n",
     "        else:\n",
-    "            return trimmed\n",
+    "            return contracted + trimmed[(pointer + 1):]\n",
     "    \n",
     "\n",
     "def is_imperative_verb(token):\n",
@@ -894,7 +887,7 @@
     "        take_first_sentence_and_remove_leading_words(\n",
     "            \"``They went to Spain,'' \", lowercase_first_letter=True\n",
     "        ) \n",
-    "            == \"``They went to Spain,''.\"\n",
+    "            == \"``They went to Spain.''\"\n",
     "    )\n",
     "    assert take_first_sentence_and_remove_leading_words(\"\") is None\n",
     "\n",
@@ -904,8 +897,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
+   "execution_count": 53,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def take_last_sentence_and_resolve_pronouns(\n",
@@ -981,7 +976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 54,
    "metadata": {
     "collapsed": true
    },
@@ -1005,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 55,
    "metadata": {
     "collapsed": true
    },
