--- a/project/rce_generation.ipynb
+++ b/project/rce_generation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -27,24 +27,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "ALTERNATIVES_XLSX_PATH = (\n",
-    "    \"/Users/YK/mt/project/statements_3/prefiltered_alternatives_train-middle_3bb56a8a.xlsx\"\n",
+    "    \"/Users/YK/mt/project/statements_5/paraphrased_test-middle_462603ae.xlsx\"\n",
     ")\n",
-    "RACE_PART = \"train/middle\"\n",
+    "RACE_PART = \"test/middle\"\n",
     "RACE_DIR = \"/Users/YK/mt/RACE\"\n",
     "OUTPUT_DIR = os.path.join(\"/Users/YK/mt/project/generated_rce/\", RACE_PART)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "reason_scores = pd.read_csv(\n",
@@ -59,8 +61,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df = pd.read_excel(ALTERNATIVES_XLSX_PATH)"
@@ -68,18 +72,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{\"Nucleus starts with 'if' and its left subrelation is not 'Condition'.\",\n",
-       " \"Satellite starts with 'so'.\",\n",
-       " \"Satellite's nucleus starts with 'but'.\"}"
+       "{'Common pattern ( -Explanation->Condition).',\n",
+       " 'Common pattern (Elaboration-JOINT).'}"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,17 +93,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Common pattern (Condition-Explanation).',\n",
-       " 'Common pattern (Elaboration-Joint).'}"
+       "{'Common pattern (Condition-Explanation).', 'Common pattern (Nucleus=NN- ).'}"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 41,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 42,
    "metadata": {
     "collapsed": true
    },
@@ -135,8 +137,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
-   "metadata": {},
+   "execution_count": 43,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def swap(array, i_1, i_2):\n",
@@ -184,15 +188,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
+   "execution_count": 66,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grouped = df[\n",
-    "    [\"text_no\", \"true_statement\", \"alternative_statement\", \"position\"]\n",
+    "    [\n",
+    "        \"text_no\", \n",
+    "        \"true_statement\", \n",
+    "        \"nuclei_hash\", \n",
+    "        \"synonym_paraphrased_alternative_statement\",\n",
+    "        \"position\"\n",
+    "    ]\n",
     "].pivot_table(\n",
-    "    values=\"alternative_statement\",\n",
-    "    index=[\"text_no\", \"true_statement\"],\n",
+    "    values=\"synonym_paraphrased_alternative_statement\",\n",
+    "    index=[\"text_no\", \"true_statement\", \"nuclei_hash\"],\n",
     "    columns=\"position\",\n",
     "    aggfunc=tuple\n",
     ")\n",
@@ -202,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -215,13 +227,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "metadata": {},
+   "execution_count": 69,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "grouped = pd.merge(\n",
+    "    grouped,\n",
+    "    df[\n",
+    "        [\"true_statement\", \"synonym_paraphrased_true_statement\"]\n",
+    "    ].groupby(\"true_statement\").head(1),\n",
+    "    on=\"true_statement\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "grouped[\"rce\"] = grouped.apply(\n",
     "    lambda row: generate_rce(\n",
-    "        row.true_statement,\n",
+    "        row.synonym_paraphrased_true_statement,\n",
     "        row.before,\n",
     "        row.nested,\n",
     "        row.after,\n",
@@ -235,7 +266,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['text_no', 'true_statement', 'nuclei_hash', 'after', 'before', 'nested',\n",
+       "       'swap_first_two', 'human_input_pos', 'true_statement_pos',\n",
+       "       'synonym_paraphrased_true_statement', 'rce'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -244,17 +298,60 @@
     "merged = pd.merge(\n",
     "    grouped.loc[~grouped.rce.isnull()],\n",
     "    pd.merge(\n",
-    "        df.groupby(\"true_statement\").reason.first().reset_index(),\n",
+    "        df.groupby(\n",
+    "            [\"true_statement\"]\n",
+    "        ).reason.first().reset_index(),\n",
     "        reason_scores,\n",
     "        on=\"reason\"\n",
     "    ),\n",
-    "    on=\"true_statement\"\n",
+    "    on=[\"true_statement\"]\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['text_no', 'true_statement', 'nuclei_hash', 'after', 'before', 'nested',\n",
+       "       'swap_first_two', 'human_input_pos', 'true_statement_pos',\n",
+       "       'synonym_paraphrased_true_statement', 'rce', 'reason', 'score'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merged.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rce_df = merged[[\"text_no\", \"nuclei_hash\", \"rce\", \"score\"]].sort_values(\n",
+    "    by=\"score\", ascending=False\n",
+    ").groupby(\n",
+    "    [\"text_no\", \"nuclei_hash\"]\n",
+    ").head(\n",
+    "    1\n",
+    ").reset_index(\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
    "metadata": {
     "collapsed": true
    },
@@ -274,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true
    },
@@ -285,11 +382,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "metadata": {},
+   "execution_count": 80,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "for text_no, group in merged.sort_values(\n",
+    "for text_no, group in rce_df.sort_values(\n",
     "    by=\"score\", ascending=False\n",
     ").groupby(by=\"text_no\"):\n",
     "    race = load_race(text_no)\n",
@@ -302,6 +401,164 @@
     "        with open(os.path.join(OUTPUT_DIR, f\"{text_no}.rce.txt\"), \"wt\") as f:\n",
     "            json.dump(output, f)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rce_to_str(text_no):\n",
+    "    output_chunks = []\n",
+    "    with open(os.path.join(OUTPUT_DIR, f\"{text_no}.rce.txt\"), \"rt\") as f:\n",
+    "        rce = json.loads(f.read())\n",
+    "    output_chunks.append(f\"TEXT No.{text_no}:\\n\\n{rce['race']['article']}\\n\\n\")\n",
+    "    output_chunks.append(f\"GENERATED QUESTIONS:\\n\\n\")\n",
+    "    for i, options in enumerate(rce[\"generated\"][\"generated_options\"]):\n",
+    "        output_chunks.append(f\"{i + 1}. Which of the following is true?\\n\")\n",
+    "        answer = rce['generated']['generated_answers'][i]\n",
+    "        block = []\n",
+    "        for j, option in enumerate(options):\n",
+    "            current_letter = ['A', 'B', 'C', 'D'][j]\n",
+    "#             is_true = current_letter == answer\n",
+    "#             output_chunks.append(\n",
+    "#                 f\"Statement #{j + 1} ({is_true}):\\n{option}\\n\"\n",
+    "#             )\n",
+    "            block.append(f\"{current_letter}. {option}\")\n",
+    "        output_chunks.append(\"\\n\".join(block))\n",
+    "        output_chunks.append(\"\")\n",
+    "        output_chunks.append(f\"Answer: {answer}\")\n",
+    "        output_chunks.append(\"\")\n",
+    "    return \"\\n\".join(output_chunks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = []\n",
+    "for text_no in rce_df.text_no.unique():\n",
+    "    file_path = os.path.join(OUTPUT_DIR, f\"{text_no}.rce.txt\")\n",
+    "    if os.path.exists(file_path):\n",
+    "        with open(file_path, \"rt\") as f:\n",
+    "            rce = json.loads(f.read())\n",
+    "        result.append((text_no, len(rce[\"generated\"][\"generated_answers\"])))\n",
+    "rce_stats_df = pd.DataFrame(result, columns=[\"text_no\", \"n_questions\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1    53\n",
+       "2     8\n",
+       "4     1\n",
+       "3     1\n",
+       "Name: n_questions, dtype: int64"
+      ]
+     },
+     "execution_count": 85,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rce_stats_df.n_questions.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rce_strings = [\n",
+    "    rce_to_str(text_no) \n",
+    "    for text_no in rce_stats_df.loc[rce_stats_df.n_questions >= 2].text_no\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with open(os.path.join(OUTPUT_DIR, \"rce-2+q.txt\"), \"wt\") as f:\n",
+    "    f.write(\"\\n\\n\\n\".join(rce_strings))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "TEXT No.785:\n",
+      "\n",
+      "Today is the fifth day of August. It is Judy's birthday. When she comes back home from school, she sees a card on the table. It says, \"There's a present   for you, Judy. Look for it in your bedroom.\" Judy runs into her bedroom. Her parents are looking at her and _ . On the chair she sees a red box. She thinks her present must be in it. She opens it, and there is a piece of paper in it. She reads it, \"Dear Judy, I'm your present. My first letter is in the word 'bag', but not in 'age'. My second letter is in 'like', but not in 'lake'. My third letter is in \"know\", but not in 'now'. And you can find my last letter in both 'desk' and 'get'. What am I?\" Judy thinks for a while and says, \"Aha, I know. But where is it?\" Her father tells her it is in her study.\n",
+      "What is it? Do you know?\n",
+      ". (5)\n",
+      "\n",
+      "\n",
+      "GENERATED QUESTIONS:\n",
+      "\n",
+      "\n",
+      "1. Which of the following is true?\n",
+      "\n",
+      "A. She sees a red box, and she thinks her present must be in it.\n",
+      "B. She sees a red box, and Judy runs into her bedroom.\n",
+      "C. HUMAN_INPUT\n",
+      "D. She sees a red box, and Judy thinks for a while and states,'' Aha, I know.\n",
+      "\n",
+      "Answer: A\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(rce_to_str(785))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
